syntax = "proto3";

package resources.documents;

import "google/protobuf/duration.proto";
import "validate/validate.proto";

option go_package = "github.com/fivenet-app/fivenet/v2025/gen/go/proto/resources/documents;documents";

// @dbscanner: json
message Workflow {
  bool reminder = 1;
  ReminderSettings reminder_settings = 2;

  bool auto_close = 3;
  AutoCloseSettings auto_close_settings = 4;
}

message ReminderSettings {
  repeated Reminder reminders = 1 [(validate.rules).repeated.max_items = 3];
}

message Reminder {
  google.protobuf.Duration duration = 1 [(validate.rules).duration = {
    required: true,
    lt:  {seconds: 7776000}, // 90 days
    gte: {seconds: 86400}, // 1 day
  }];
  string message = 2 [(validate.rules).string.max_len = 255];
}

message AutoCloseSettings {
  google.protobuf.Duration duration = 1 [(validate.rules).duration = {
    required: true,
    lt:  {seconds: 7776000}, // 90 days
    gte: {seconds: 86400}, // 1 day
  }];
  string message = 2 [(validate.rules).string.max_len = 255];
}

message WorkflowCronData {
  uint64 last_doc_id = 1;
}
